<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity">

    <TextView
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/log_in_text_view_id" android:textSize="35sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="72dp" android:layout_marginStart="36dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textEmailAddress"
            android:ems="10"
            android:id="@+id/log_in_username_edit_text_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="200dp" android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/log_in_text_view_id" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/username_or_email_address"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/log_in_password_edit_text_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" android:layout_marginStart="36dp"
            app:layout_constraintTop_toBottomOf="@+id/log_in_username_edit_text_id" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textPassword" android:hint="@string/password"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_text_view_sign_up_id" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/log_in_text_view_id"/>
    <TextView
            android:text="@string/forgot_the_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_forgot_password_id" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/log_in_password_edit_text_id"/>
    <Button
            android:text="@string/log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_button_id" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/log_in_forgot_password_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>