<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">
    <TextView
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#000000" android:textSize="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_text_view_id" android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="72dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_log_in_text_view_id"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/defaultMargin" app:layout_constraintBottom_toBottomOf="@+id/sign_up_text_view_id"
            android:layout_marginBottom="@dimen/smallMargin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/sign_in_email_edit_text_id" android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text_view_id" android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_username_edit_text_id"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginBottom="@dimen/smallMargin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/username"
            android:id="@+id/sign_in_username_edit_text_id"
            android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_edit_text_id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_password_edit_text_id" android:layout_marginBottom="@dimen/smallMargin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/sign_in_password_edit_text_id"
            android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_username_edit_text_id"
            android:inputType="textPassword|numberPassword|textWebPassword" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/editText4" android:layout_marginBottom="@dimen/smallMargin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:ems="10"
            android:id="@+id/editText4" android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edit_text_id"
            android:inputType="textPassword|numberPassword|textWebPassword" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_button_id" android:layout_marginBottom="@dimen/smallMargin"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/defaultMargin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>